--- a/beautyApp/frontend/src/app/customer-pages/search-page/search-page.component.css
+++ b/beautyApp/frontend/src/app/customer-pages/search-page/search-page.component.css
@@ -1,34 +1,19 @@
-body, html{
+
+  body, mat-drawer-container{
     background-color: #D8C2A5;
-}
-.intro {
-  height: 65%;
-  width: 90%;
-}
-
-
-.bg-image {
-  height: 70vh; /* 70% of the viewport height */
-}
-
-.card-header {
-  border-bottom: 3px solid #30ed;
-}
-
-.form-control {
-  border-color: transparent;
-}
-
-.input-group>.form-control:focus {
-  border-color: transparent;
-  box-shadow: inset 0 0 0 1px transparent;
-}
-.btn-outline-info.btn-lg.dropdown-toggle {
-    width: 200px; /* Adjust width as needed */
-    height: 50px; /* Adjust height as needed */
+    height: 100%;
   }
 
-  .card-design{
-    width: 50%;
-    margin-left: 25%;
+  mat-drawer{
+    width: 30%;
+    height: 100%;
   }
+
+  .search-section{
+    margin-top: 2%;
+    width: 70%;
+    margin-left: 15%;
+  }
+ 
+ 
+
