--- a/beautyApp/frontend/src/app/customer-pages/availability-page/availability-page.component.css
+++ b/beautyApp/frontend/src/app/customer-pages/availability-page/availability-page.component.css
@@ -1,3 +1,7 @@
+  .inline-calendar-card {
+    width: 300px;
+    margin: 0 auto;
+  }
 
   body, mat-drawer-container{
     background-color: #D8C2A5;
@@ -15,8 +19,19 @@
     width: 70%;
     margin-left: 15%;
   }
- 
+  
+  /* CSS to center the <p> element horizontally */
+.selected-date {
+  text-align: center;
+  display: block;
+  margin-top: 10px; /* Adjust as needed for spacing */
+}
 
+.selected-time-slot {
+  text-align: center;
+  display: block;
+  margin-top: 10px; /* Adjust as needed for spacing */
+}
 
  
 
