--- a/beautyApp/frontend/src/app/customer-pages/search-page/search-page.component.html
+++ b/beautyApp/frontend/src/app/customer-pages/search-page/search-page.component.html
@@ -23,21 +23,19 @@
            
           </mat-card-header>
           <mat-card-content>
-            <form [formGroup]="searchForm">
-              
+            <form [formGroup]="searchForm" (ngSubmit)="onSubmit()">
               <div class="example-form-fields">
                 <mat-form-field style="width: 100%;">
                   <mat-label>Shop Name</mat-label>
-                  <input matInput placeholder="Shop Name">
+                  <input matInput formControlName="shopName" placeholder="Shop Name">
                 </mat-form-field>
-        
               </div>
+              <mat-card-actions align="end">
+                <button mat-button type="submit">Search</button>
+              </mat-card-actions>
             </form>
           </mat-card-content>
         
-          <mat-card-actions align="end"> 
-            <button mat-button>Search</button>
-          </mat-card-actions>
         </mat-card>
         
       </div>
