--- a/beautyApp/frontend/src/app/customer-pages/pricing-page/pricing-page.component.css
+++ b/beautyApp/frontend/src/app/customer-pages/pricing-page/pricing-page.component.css
@@ -9,11 +9,74 @@
     height: 100%;
   }
 
-
- 
-  .search-section{
+  .pricing-card {
     margin-top: 2%;
     width: 70%;
-    margin-left: 15%;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: #C6B4B4;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  }
+  
+  .pricing-card-header {
+    text-align: center;
+    padding: 16px;
+    display: flex;
+    justify-content: center;
+  }
+  
+  .pricing-card-title {
+    text-align: center;
+    font-weight: bold;
+    color: white;
+    font-family: sans-serif;
+    font-size: larger;
+  }
+  
+  .pricing-card-loading {
+    padding: 16px;
+    color: white;
+    text-align: center;
   }
 
+  .pricing-card-content {
+    padding: 16px;
+    color: white;
+  }
+  
+  .pricing-row {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 8px;
+  }
+  
+  .pricing-cost {
+    text-align: right;
+  }
+
+  .no-pricing {
+    text-align: center;
+  }
+
+
+  .pricing-card-actions {
+    padding: 16px;
+    display: flex;
+    justify-content: space-between;
+  }
+  
+  .pricing-button {
+    padding: 8px 16px;
+    background-color: #4CAF50;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+  
+  .pricing-button:hover {
+    background-color: #45a049;
+  }
+  
