--- a/beautyApp/frontend/src/app/customer-pages/availability-page/availability-page.component.html
+++ b/beautyApp/frontend/src/app/customer-pages/availability-page/availability-page.component.html
@@ -44,7 +44,8 @@
             </button>
           </div>
           <p class="selected-time-slot">Selected time slot: {{ selectedTimeSlot }}</p>
-      </div>
+          <button (click)="bookAppointment()">Book</button>
+        </div>
     </mat-drawer-content>
   </mat-drawer-container>
   
