--- a/beautyApp/frontend/src/app/customer-pages/search-page/search-page.component.html
+++ b/beautyApp/frontend/src/app/customer-pages/search-page/search-page.component.html
@@ -39,7 +39,31 @@
         </mat-card>
         
       </div>
+
+      <br>
+
+      <div *ngIf="searchSuccess">
+        <mat-card *ngFor="let item of search">
+          <mat-card-header>
+            <mat-card-title>{{ item.name }}</mat-card-title>
+          </mat-card-header>
+          <mat-card-content>
+            <p>Location: {{ item.location }}</p>
+            <p>Description: {{ item.description }}</p>
+          </mat-card-content>
+        </mat-card>
+        <br>
+      </div>
       
+      <div *ngIf="!searchSuccess">
+        <mat-card>
+          <mat-card-header>
+            <mat-card-title>Unable to find Shop</mat-card-title>
+          </mat-card-header>
+        </mat-card>
+        <br>
+      </div>
+
     </mat-drawer-content>
    
     
@@ -50,4 +74,3 @@
   
 
 </body>
-
