--- a/beautyApp/frontend/src/app/customer-pages/search-page/search-page.component.css
+++ b/beautyApp/frontend/src/app/customer-pages/search-page/search-page.component.css
@@ -14,6 +14,17 @@
     width: 70%;
     margin-left: 15%;
   }
+
+  mat-drawer{
+    width: 30%;
+    height: 100%;
+    background-color: #C6B4B4;
+  }
+
+  a{
+    background-color: #C6B4B4;
+    border-color: #C6B4B4;
+  }
  
  
 
