--- a/beautyApp/frontend/src/app/home-pages/base-home/base-home.component.html
+++ b/beautyApp/frontend/src/app/home-pages/base-home/base-home.component.html
@@ -1,5 +1,7 @@
 
 <div class="background-header">
+    <img style="height: auto; width:10%;" src="logo.png" > 
+    <a href="/login" style="margin: 2%; float: right;" > Log In</a>
     <div class="welcome-title">
         <p>Welcome to your 
             one stop platform
@@ -7,8 +9,14 @@
         <button mat-raised-button (click)="login()">Login</button>
     </div>    
     <div class="container-service">
-        <p> Services </p>
+        <p style="width: 20%; margin-left: 50%;"> Services </p>
+        <!-- <img style="height: auto; width:30%;" src="logo.png" > 
+        <img style="height: auto; width:30%;" src="logo.png" > 
+        <img style="height: auto; width:30%;" src="logo.png" >  -->
+        
     </div>
+    
+
 </div>
 
 
