--- a/beautyApp/frontend/src/app/manage-business-pages/manage-business-pages.component.html
+++ b/beautyApp/frontend/src/app/manage-business-pages/manage-business-pages.component.html
@@ -1,22 +1,9 @@
 <body>
 
     <div class="container">
-        <div class="body">
-            <input type="checkbox"  class="openSidebarMenu" id="openSidebarMenu">
-            <label for="openSidebarMenu" class="sidebarIconToggle">
-                <div class="spinner diagonal part-1"></div>
-                <div class="spinner horizontal"></div>
-                <div class="spinner diagonal part-2"></div>
-            </label>
-            <div id="sidebarMenu">
-                  <div class="main-content-wrapper">
-                      <a href="/">Nails</a>
-                      <a href="/">Lashes</a>
-                      <a (click)="logout()">Log out</a>
-                  </div>
-              </div>
-          </div>
-        <h2 class="text-center">User List</h2>
+        <h2 class="text-center">Service List</h2>
+        <button mat-raised-button color="primary" class="create-button" routerLink="/business">Create Business</button>
+        <br><br>
         <table class="table table-stripped">
             <thead>
                 <tr>
@@ -27,20 +14,19 @@
                 </tr>
             </thead>
             <tbody>
-                <!-- <tr *ngFor="let user of users">
-                    <td> {{ user.name }} </td>
-                    <td> {{ user.name }} </td>
-                    <td> {{ user.name }} </td>
+                <tr *ngFor="let s of service">
+                    <td> {{ s.serviceName }} </td>
+                    <td> {{ s.serviceType }} </td>
+                    <td> {{ s.serviceLocation }} </td>
                     <td>
-                        <button (click) = "updateUser(user.userId)" class="btn btn-info">Update</button>
-                        <button (click) = "deleteUser(user.userId)" class="btn btn-danger">Delete</button>
+                        <button (click) = "updateService(s.serviceId)" class="btn btn-info">Update</button>
+                        <button (click) = "deleteService(s.serviceId)" class="btn btn-danger">Delete</button>
                     </td>
-                </tr> -->
+                </tr>
             </tbody>
-    
+            <br><br>
             <button mat-raised-button color="primary" (click)="logout()">Logout</button>
         </table>
     
     
     </div>
-    </body><p>manage-business-pages works!</p>
