--- a/beautyApp/frontend/src/app/customer-pages/availability-page/availability-page.component.html
+++ b/beautyApp/frontend/src/app/customer-pages/availability-page/availability-page.component.html
@@ -34,15 +34,25 @@
           </div>
 
           <mat-card class="inline-calendar-card">
-            <mat-calendar [(selected)]="selected"></mat-calendar>
+            <mat-calendar [(selected)]="selected" (selectedChange)="selectDate($event)"></mat-calendar>
           </mat-card>
-          <p class="selected-date">Selected date: {{selected}}</p>
+          
+          <p class="selected-date">Selected date: {{selected | date: 'longDate'}}</p>
 
-          <div class="time-slots">
+          <!--<div class="time-slots">
             <button *ngFor="let timeSlot of timeSlots" (click)="selectTimeSlot(timeSlot)" [class.selected]="timeSlot === selectedTimeSlot">
               {{ timeSlot }} - {{ addHour(timeSlot) }}
             </button>
+          </div>-->
+          <div class="time-slots">
+            <button *ngFor="let timeSlot of timeSlots"
+                    [disabled]="isTimeSlotUnavailable(timeSlot)"
+                    (click)="selectTimeSlot(timeSlot)"
+                    [class.selected]="timeSlot === selectedTimeSlot">
+              {{ timeSlot }} - {{ addHour(timeSlot) }}
+            </button>
           </div>
+          
           <p class="selected-time-slot">Selected time slot: {{ selectedTimeSlot }}</p>
           <button (click)="bookAppointment()">Book</button>
         </div>
