user settings done

--- a/beautyApp/frontend/src/app/customer-pages/dashboard-page/dashboard-page.component.html
+++ b/beautyApp/frontend/src/app/customer-pages/dashboard-page/dashboard-page.component.html
@@ -72,7 +72,7 @@
 
             <mat-card>
                 <mat-card-header>
-                  <mat-card-title> Account Settings</mat-card-title>
+                  <mat-card-title  (click) = "settingsPage()"  style="cursor: pointer;"> Account Settings</mat-card-title>
                 </mat-card-header>
                
             </mat-card>
