--- a/beautyApp/frontend/src/app/customer-pages/search-page/search-page.component.html
+++ b/beautyApp/frontend/src/app/customer-pages/search-page/search-page.component.html
@@ -47,11 +47,14 @@
       <div *ngIf="searchSuccess">
         <mat-card *ngFor="let item of search">
           <mat-card-header>
-            <mat-card-title>{{ item.serviceName }}</mat-card-title>
+            <mat-card-title>
+              <a  style="color: beige; cursor: pointer;" (click)= "shopPath(item.serviceId)">{{ item.serviceName }}</a>
+            </mat-card-title>
           </mat-card-header>
           <mat-card-content>
             <p>Location: {{ item.serviceLocation }}</p>
             <p>Description: {{ item.serviceDescription }}</p>
+            
           </mat-card-content>
         </mat-card>
         <br>
