update pricing list

--- a/beautyApp/frontend/src/app/business-pages/business-pages.component.html
+++ b/beautyApp/frontend/src/app/business-pages/business-pages.component.html
@@ -49,7 +49,8 @@
                 <mat-datepicker #picker></mat-datepicker>
               </mat-form-field> -->
               <mat-card-header> <mat-card-subtitle>Service Menu (Pricing List)</mat-card-subtitle></mat-card-header>
-              <div class="example-container" *ngFor="let product of products; let i = index">
+              <div *ngIf="serviceId === null">
+              <div class="example-container"  *ngFor="let product of products; let i = index">
                 <mat-form-field>
                   <input matInput placeholder="Service Name" formControlName="productName{{i}}">
                 </mat-form-field>
@@ -57,6 +58,7 @@
                   <span matPrefix style="color: white;">$&nbsp;</span>
                   <input matInput type="number" placeholder="Service Price" formControlName="productPrice{{i}}">
                 </mat-form-field>
+
                 <mat-form-field>
                   <mat-label>Service Add On</mat-label>
                   <mat-select formControlName="productAddon{{i}}">
@@ -68,9 +70,29 @@
                   <mat-icon>remove_circle</mat-icon>
                 </button>
               </div>
-
               <button mat-raised-button color="primary" (click)="addProduct()">Add Product</button>
               <br>
+            </div>
+              <table class="table table-stripped" *ngIf="serviceId !== null">
+                <thead>
+                    <tr>
+                        <th>Service Name</th>
+                        <th>Type</th>
+                        <th>Actions</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr *ngFor="let s of products">
+                        <td> {{ s.pricingName }} </td>
+                        <td> {{ s.pricingCost }} </td>
+                        <td>
+                            <button (click) = "updatePricing(s.pricingId)" class="btn btn-info">Update</button>
+                            <button (click) = "deletePricing(s.pricingId)" class="btn btn-danger">Delete</button>
+                        </td>
+                    </tr>
+                </tbody>
+                <br><br>
+                </table>
               <mat-card-header> <mat-card-subtitle>Photo Listing</mat-card-subtitle></mat-card-header>
               <button type="button"><input type="file" multiple (change)="onFileSelected($event)" accept="image/*"></button>
             </form>
