--- a/beautyApp/frontend/src/app/manage-business-pages/manage-business-pages.component.html
+++ b/beautyApp/frontend/src/app/manage-business-pages/manage-business-pages.component.html
@@ -32,3 +32,9 @@
     
     
     </div>
+
+    <footer>
+        <div class="container">
+            <p>&copy; 2024 Nails Service. All rights reserved.</p>
+        </div>
+    </footer>
