--- a/beautyApp/frontend/src/app/customer-pages/availability-page/availability-page.component.html
+++ b/beautyApp/frontend/src/app/customer-pages/availability-page/availability-page.component.html
@@ -2,15 +2,20 @@
 
   <mat-drawer-container class="example-container" hasBackdrop="false">
     <mat-drawer #drawer mode="side">
+      
+      <img style="height: auto; width:60%; margin-left:20%;" src="logo.png" > 
       <div class="main-content-wrapper">
-        <a style="color: beige; cursor: pointer;" (click)="routeTo('nails'); drawer.toggle()">Nails</a>
-        <a style="color: beige; cursor: pointer;" (click)="routeTo('lash'); drawer.toggle()">Lashes</a>
-        <a style="color: beige; cursor: pointer;" (click)="logout()">Log out</a>
+      
+
+        <a  style="color: beige; cursor: pointer;" (click)= "routeTo('nails')" (click)="drawer.toggle()">Nails</a>
+        <a  style="color: beige; cursor: pointer;"  (click) = "routeTo('lash')" (click)="drawer.toggle()">Lashes</a>
+        <a  style="color: beige; cursor: pointer;"  (click) = "returnToDashBoard()" (click)="drawer.toggle()">Home</a>
+        <a  style="color: beige; cursor: pointer;"  (click)="logout()">Log out</a>
       </div>
     </mat-drawer>
     <mat-drawer-content>
-
-      <input type="checkbox" class="openSidebarMenu" id="openSidebarMenu">
+   
+      <input type="checkbox"  class="openSidebarMenu" id="openSidebarMenu">
       <label for="openSidebarMenu" (click)="drawer.toggle()" class="sidebarIconToggle">
           <div class="spinner diagonal part-1"></div>
           <div class="spinner horizontal"></div>
